--- a/about.Rmd
+++ b/about.Rmd
@@ -14,4 +14,5 @@ output:
 
 * I spent three years in a biology physics laboratory, working on the Tau protein, which is a known causative factor in Alzheimer's disease. My professor and colleagues greatly inspired me during my time as a research assistant. This experience has fueled my desire to pursue a Master's degree in Epidemiology, with a particular focus on the study of aging and chronic diseases.
 
-![](images/mcchoi_lab.jpeg)
+
+<img src="images/mcchoi_lab.jpeg" style="width:75%">
