Editing my resume

--- a/about.Rmd
+++ b/about.Rmd
@@ -61,7 +61,7 @@ January 2019 to May 2019 25 Crescent Road Greenbelt, MD 20770
 
 --------------------------------------------------------------------------------
 
-## LEADERSHIP EXPERIENCE & COMMUNITY INVOLVEMENT
+## LEADERSHIP EXPERIENCE
 
 **Fundraising Chair, Miles for Smiles, University of Maryland**
 : September 2015 to May 2017
@@ -73,8 +73,14 @@ Korean Engineering and Science Student Association, University of Maryland
 * Created and maintained event expenditures, budgets, and timelines by utilizing internal databases
 * Managed administrative logistics of events planning, event booking, and event promotions
 
+**Event Coordinator, Korean Engineering and Science Student Association, University of Maryland**
+: June 2015 to September 2016
+
+* Created and maintained event expenditures, budgets, and timelines by utilizing internal databases
+* Managed administrative logistics of events planning, event booking, and event promotions
+
 **Terps for Change**
-Spring semester 2016
+: Spring semester 2016
 
 *	Volunteered for after-school tutoring at Northwestern high school students
 * Visited a local site to perform hands-on community service once a week
