--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -34,7 +34,8 @@ instacart %>%
   plot_ly(x = ~order_hour_of_day, y = ~n,
           type = "scatter",
           mode = "markers",
-          name = ~department) %>%
+          name = ~department,
+          color = ~n, colors = "viridis") %>%
   layout(title = "Number of Snack Orders by Hour of the Day",
          xaxis = list(title = "Hour of the Day"),
          yaxis = list(title = "Number of Snack Orders"))
@@ -42,6 +43,8 @@ instacart %>%
 
 
 
+Column {data-width=350}
+-----------------------------------------------------------------------
 
 
 
