--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 
-**Creating a flexdashboard***
+**Creating a flexdashboard**
 ```{r include=FALSE}
 library(flexdashboard)
 library(tidyverse)
@@ -26,8 +26,6 @@ data("instacart")
 ### Chart A
 
 ```{r echo=FALSE}
-
-library(plotly)
 
 instacart %>%
   group_by(order_hour_of_day, department) %>%
@@ -54,9 +52,6 @@ instacart %>%
 
 ```{r echo=FALSE}
 data("instacart")
-
-
-library(plotly)
 
 instacart %>%
   group_by(order_hour_of_day, department) %>%
